# axum-template

./: Cargo.toml  README.md
src/: app.rs  config.rs  database.rs  main.rs
src/models/: user.rs
src/routes/: auth.rs
src/utils/: custom_serde.rs  error.rs  extractors.rs  mod.rs
